hash for fragment references

--- a/svg-aam/svg-aam.html
+++ b/svg-aam/svg-aam.html
@@ -1330,7 +1330,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-group"><code title="attr-core-role-map-group">group</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created
   </td>
   <td>
@@ -1366,7 +1366,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created
   </td>
   <td>
@@ -1380,7 +1380,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created
     <p class="note">
       If a symbol role is introduced, as proposed by the ARIA graphics module,
@@ -1433,7 +1433,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created
     <p class="note">
       If a symbol role is introduced, as proposed by the ARIA graphics module,
@@ -1461,7 +1461,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created 
     <p class="note">
       If a symbol role is introduced, as proposed by the ARIA graphics module,
@@ -1481,7 +1481,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created 
     <p class="note">
       If a symbol role is introduced, as proposed by the ARIA graphics module,
@@ -1508,7 +1508,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created 
     <p class="note">
       If a symbol role is introduced, as proposed by the ARIA graphics module,
@@ -1667,7 +1667,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-group"><code title="attr-aria-role-group">group</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created, 
     but changes in text styling SHOULD be exposed through
     properties of the parent text element where supported
@@ -1712,7 +1712,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-group"><code title="attr-aria-role-group">group</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created, 
     but changes in text styling SHOULD be exposed through
     properties of the parent text element where supported
@@ -1738,7 +1738,7 @@ var mappingTableLabels = {
   </th>
   <td>
     <a class="core-mapping" href="#role-map-img"><code title="attr-aria-role-img">img</code></a> role mapping
-    if the element meets the criteria for <a href="include_elements">Including Elements in the Accessibility Tree</a>;
+    if the element meets the criteria for <a href="#include_elements">Including Elements in the Accessibility Tree</a>;
     otherwise, no <a class="termref" data-lt="accessible object">accessible object</a> created; 
     see <a href="#mapping_additional_nd">Name and Description</a> mapping for special rules for <code>use</code> elements
     <p class="note">
@@ -1881,7 +1881,7 @@ var mappingTableLabels = {
       <li>
         <code>href</code> or <code>xlink:href</code>
         on a <a class="element-reference" href="http://www.w3.org/TR/SVG2/struct.html#UseElement"><code>use</code></a> element 
-        affects the accessible <a href="mapping_additional_nd">Name and Description</a> computation.
+        affects the accessible <a href="#mapping_additional_nd">Name and Description</a> computation.
       </li>
       <li>
         <code>tabindex</code>
@@ -1899,7 +1899,7 @@ var mappingTableLabels = {
       <li>
         <code>xlink:title</code>
         on a link element
-        affects the accessible <a href="mapping_additional_nd">Name and Description</a> computation.
+        affects the accessible <a href="#mapping_additional_nd">Name and Description</a> computation.
       </li>
     </ul>
       <p>
