--- a/html-aam/html-aam.html
+++ b/html-aam/html-aam.html
@@ -30,7 +30,7 @@
 
         // editors
         editors:  [
-          { name: "Steve Faulkner", company: "The Paciello Group", companyURL: "http://www.paciellogroup.com/" },
+          { name: "Steve Faulkner", company: "The Paciello Group", companyURL: "https://www.paciellogroup.com/" },
           { name: "Jason Kiss", company: "New Zealand Government", companyURL: "https://www.govt.nz/" }, 
 		  { name: "Alexander Surkov", company: "Mozilla Foundation", companyURL: "https://www.mozilla.org/" },
           { name: "Cynthia Shelly (until September 2013)", company: "Microsoft", companyURL: "https://www.microsoft.com/" }
