--- a/practices/aria-practices.html
+++ b/practices/aria-practices.html
@@ -48,9 +48,9 @@
           // only "name" is required
           editors:  [
               { name: "Matt King", 
-              mailto: "mattking@us.ibm.com",
-                  company: "IBM Corporation", companyURI:
-                  "http://www.ibm.com/" },
+              mailto: "mck@fb.com",
+                  company: "Facebook", companyURI:
+                  "http://www.facebook.com/" },
               { name: "James Nurthen", 
               mailto: "james.nurthen@oracle.com",
                   company: "Oracle Corporation", companyURI:
