Status for Graphics

--- a/aria/graphics.html
+++ b/aria/graphics.html
@@ -142,8 +142,16 @@
 	<p>This document is part of the <abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> suite described in the <a href="http://www.w3.org/WAI/intro/aria.php"><abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr> Overview</a>.</p>
 </section>
 <section id="sotd">
-<p>Please record issues on this specification through the <a href="https://github.com/w3c/aria/issues">Github W3C/aria issue tracker</a>, using the prefix "Graphics" for any issue.</p>
-</section>
+			<p>This is a First Public Working Draft of WAI-ARIA Graphics Module 1.0 by the <a href="http://www.w3.org/WAI/PF/svg-a11y-tf/">SVG Accessibility Taskforce</a>, a joint task force of the <a href="http://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a> and the <a href="http://www.w3.org/Graphics/SVG/WG/">SVG Working Group</a>. It is a module that extends WAI-ARIA 1.1 [[!WAI-ARIA]] to define roles specific to the needs of graphics languages including <a href="http://www.w3.org/TR/SVG2/">SVG</a> [[SVG2]]. These roles add semantics to describe features common to graphical formats that are not provided by base languages like HTML, to facilitate automated processing and accessibility support.</p>
+			<p>Feedback on any aspect of the specification is accepted. For this publication, the SVG Accessibility Task Force particularly seeks feedback on the following questions:</p>
+			<ul>
+				<li>Are proposed roles clear and appropriate to the needs of interactive graphics?</li>
+				<li>Is the use of the "graphics-" prefix in role names to avoid potential collision with other ARIA roles acceptable?</li>
+				<li>What mechanism would be suitable for addition of new roles?</li>
+				<li>Is the relationship of this specification to WAI-ARIA 1.1 clear?</li>
+			</ul>
+			<p>To comment, <a href="https://github.com/w3c/aria/issues/new">file an issue in the W3C ARIA GitHub repository</a>, using the prefix "Graphics" for any issue . If this is not feasible, send email to <a href="mailto:public-svg-a11y@w3.org?subject=Graphics%20ARIA%20public%20comment">public-svg-a11y@w3.org</a> (<a href="https://lists.w3.org/Archives/Public/public-svg-a11y/">comment archive</a>). Comments are requested by <strong>15 January 2015</strong>. In-progress updates to the document may be viewed in the <a href="http://w3c.github.io/aria/aria/graphics.html">publicly visible editors' draft</a>.</p>
+		</section>
 <section id="toc">
 </section>
 <section class="informative" id="introduction">
