Graphics WG update

--- a/aria/graphics.html
+++ b/aria/graphics.html
@@ -94,24 +94,25 @@
 		
         processVersion:  2015,
 		// name of the WG
-		wg:           "Protocols and Formats Working Group",
+		wg:           ["Accessible Rich Internet Applications Working Group", "SVG Working Group"],
 		
 		// URI of the public WG page
-		wgURI:        "http://www.w3.org/WAI/PF/",
+		wgURI:        ["http://www.w3.org/WAI/ARIA/", "http://www.w3.org/Graphics/SVG/WG/"],
 		
 		// name (with the @w3c.org) of the public mailing to which comments are due
-		wgPublicList: "public-pfwg-comments",
+		wgPublicList: "public-svg-a11y",
 		
 		// URI of the patent status for this WG, for Rec-track documents
 		// !!!! IMPORTANT !!!!
 		// This is important for Rec-track documents, do not copy a patent URI from a random
 		// document unless you know what you're doing. If in doubt ask your friendly neighbourhood
 		// Team Contact.
-		wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/32212/status",
+		wgPatentURI:  ["http://www.w3.org/2004/01/pp-impl/83726/status", "http://www.w3.org/2004/01/pp-impl/19480/status"],
 		maxTocLevel: 4,
         // Spec URLs
         ariaSpecURLs: {
           "ED": "http://w3c.github.io/aria/aria/aria.html",
+          "FPWD" : "http://www.w3.org/TR/wai-aria-1.1/",
           "WD" : "http://www.w3.org/TR/wai-aria-1.1/",
           "REC": "http://www.w3.org/TR/wai-aria/"
         },
