Update comment instructions

--- a/aria/graphics.html
+++ b/aria/graphics.html
@@ -151,7 +151,7 @@
 				<li>What mechanism would be suitable for addition of new roles?</li>
 				<li>Is the relationship of this specification to WAI-ARIA 1.1 clear?</li>
 			</ul>
-			<p>To comment, <a href="https://github.com/w3c/aria/issues/new">file an issue in the W3C ARIA GitHub repository</a>, using the prefix "Graphics" for any issue . If this is not feasible, send email to <a href="mailto:public-svg-a11y@w3.org?subject=Graphics%20ARIA%20public%20comment">public-svg-a11y@w3.org</a> (<a href="https://lists.w3.org/Archives/Public/public-svg-a11y/">comment archive</a>). Comments are requested by <strong>15 January 2016</strong>. In-progress updates to the document may be viewed in the <a href="http://w3c.github.io/aria/aria/graphics.html">publicly visible editors' draft</a>.</p>
+			<p>To comment, <a href="https://github.com/w3c/aria/issues/new">file an issue in the W3C ARIA GitHub repository</a>, using the "graphics" label in the issue. If this is not feasible, send email to <a href="mailto:public-svg-a11y@w3.org?subject=Graphics%20ARIA%20public%20comment">public-svg-a11y@w3.org</a> (<a href="https://lists.w3.org/Archives/Public/public-svg-a11y/">comment archive</a>). Comments are requested by <strong>15 January 2016</strong>. In-progress updates to the document may be viewed in the <a href="http://w3c.github.io/aria/aria/graphics.html">publicly visible editors' draft</a>.</p>
 		</section>
 <section id="toc">
 </section>
