On branch mck-action1490 modified:   aria/aria.html: Partial draft of new description for  combobox role.

--- a/aria/aria.html
+++ b/aria/aria.html
@@ -1430,22 +1430,28 @@
 		<div class="role" id="combobox">
 			<rdef>combobox</rdef>
 			<div class="role-description">
-				<p>A <rref>select</rref> made from a <rref>textbox</rref> combined with a <rref>composite</rref>, such as a <rref>listbox</rref> or <rref>grid</rref>, where the <code>textbox</code> value controls values listed in the <code>composite</code>, enabling the user to select a value from the list or,  in some cases, add a new value to the list. </p>
-				<p><code>combobox</code> is the combined presentation of a single line textfield with a listbox popup. The <code>combobox</code> may be editable. Typically editable combo boxes are used for autocomplete behavior, and authors SHOULD set <pref>aria-autocomplete</pref> attribute on the textfield.</p>
+				<p>A <rref>select</rref> made from combining a single line text input field with an associated element, such as a <rref>listbox</rref>, that allows the user to select a value for the field from a collection.</p>
+				<p>A <code>combobox</code> has 2 parts: a single line <rref>textbox</rref> and an element controlled by the <ccode>textbox</ccode> that presents a value collection. The value collection gives the user the option to choose a value for the text field. Some implementations restrict the text field value to the values in a predefined collection while others allow the user to create a new value that is dynamically added to the collection.</p>
+				<p>The <code>textbox</code> is usually a persistent element in the keyboard tab sequence where as the value collection appears dynamically and is not part of the tab sequence. Keyboard access to the value collection is typically provided via the <kbd>Down Arrow</kbd> key when the <code>textbox</code> has focus. In some implementations, the value collection is not available until a certain number of characters are present in the text field.</p>
+				<p>To be <a>keyboard accessible</a>, authors SHOULD manage focus of descendants for all instances of this <a>role</a>, as described in <a href="#managingfocus">Managing Focus</a>.</p>
+				<p>Authors MUST set <pref>aria-multiline</pref> to <code>false</code> on the text input element.</p>
+				<p>Authors MUST present the value collection in an element with a role of <rref>listbox</rref>, <rref>tree</rref>, or <rref>grid</rref>.</p> 
+				<p>Authors SHOULD set <pref>aria-autocomplete</pref> attribute on the textfield as follows.</p>
 				<ul>
 					<li>If an author sets a combobox's value of aria-autocomplete to 'none' (default), authors MUST manage and set focus on the associated listbox, so assistive technologies can follow the currently selected value.</li>
 					<li>If an author sets a combobox's value of aria-autocomplete to 'inline' or 'both', authors MUST update the value of the focused textfield, so assistive technologies can announce the currently selected value.</li>
-					<li>If an author sets a combobox's value of aria-autocomplete to 'list', user agents MUST expose changes to the aria-activedescendant attribute on the combobox while the combobox remains focused. If a change to the aria-activedescendant attribute occurs while the combobox is focused, assistive technologies SHOULD alert the user of that change, for example, by speaking the text alternative of the new active descendant element. Authors SHOULD associate the combobox textfield with its listbox using aria-owns. For example:
-						<pre class="example highlight">&lt;input type="text" aria-label="Tag" role="combobox" aria-expanded="true"
+					<li>If an author sets a combobox's value of aria-autocomplete to 'list', user agents MUST expose changes to the aria-activedescendant attribute on the combobox while the combobox remains focused. If a change to the aria-activedescendant attribute occurs while the combobox is focused, assistive technologies SHOULD alert the user of that change, for example, by speaking the text alternative of the new active descendant element.</li>
+					</ul>
+					<p>Authors SHOULD associate the combobox textfield with its listbox using aria-owns. For example:</p>
+						<pre class="example highlight">
+						&lt;input type="text" aria-label="Tag" role="combobox" aria-expanded="true"
   <strong>aria-autocomplete="list" aria-owns="owned_listbox" aria-activedescendant="selected_option"</strong>&gt;
 &lt;ul role="listbox" <strong>id="owned_listbox"</strong>&gt;
   &lt;li role="option"&gt;Zebra&lt;/li&gt;
   &lt;li role="option" <strong>id="selected_option"</strong>&gt;Zoom&lt;/li&gt;
-&lt;/ul&gt;</pre>
-					</li>
-				</ul>
+&lt;/ul&gt;
+</pre>
 				<p class="note">In <cite><a href="http://www.w3.org/TR/2007/REC-xforms-20071029/">XForms</a></cite> [[XFORMS10]] the same <code>select</code> can have one of 3 appearances: combo-box, drop-down box, or group of radio-buttons. Many browsers allow users to type ahead to existing choices in a drop-down select widget. This specification does not constrain the presentation of the combo box.</p>
-				<p>To be <a>keyboard accessible</a>, authors SHOULD manage focus of descendants for all instances of this <a>role</a>, as described in <a href="#managingfocus">Managing Focus</a>.</p>
 				<p class="note">Elements with the role <code>combobox</code> have an implicit <sref>aria-expanded</sref> value of <code>false</code>.</p>
 				<p class="note">Elements with the role <code>combobox</code> have an implicit <pref>aria-haspopup</pref> value of <code>true</code>.</p>
 				<p class="note">Elements with the role <code>combobox</code> have an implicit <pref>aria-orientation</pref> value of <code>vertical</code>.</p>
