Add base for breadcrumb design pattern

--- a/practices/aria-practices.html
+++ b/practices/aria-practices.html
@@ -492,6 +492,35 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
       </table>
     </section>
 <hr />
+
+  <section class="widget" id="breadcrumb">
+    <h3 class="widget-name">Breadcrumb</h3>
+    <table class="widget-features">
+      <caption>Characteristics:</caption>
+      <tbody>
+        <tr>
+          <th class="widget-description-head" scope="row">Description:</th>
+          <td class="widget-description"></td>
+        </tr>
+        <tr>
+          <th class="widget-keyboard-head" scope="row">Keyboard Interaction:</th>
+          <td class="widget-keyboard"></td>
+        </tr>
+        <tr>
+          <th class="widget-aria-head" scope="row">WAI-ARIA Roles, States, and Properties:</th>
+          <td class="widget-aria"></td>
+        </tr>
+        <tr>
+          <th class="widget-example-head" scope="row">Example:</th>
+          <td class="widget-example">
+            <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG taskforce is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+  <hr>
+
 <section class="widget" id="button">
   <h3 class="widget-name">Button</h3>
       <table class="widget-features">
